--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
+/*--------------- Variables ------------------*/
+:root {
+  /*Colors*/
+  --color-background: #1b2a49;
+  --color-primary: #00909e;
+  --color-secundary: #465881;
+  --color-font: #c9d1d3;
+
+  --color-white: white;
+  --color-black: black;
+  --color-black-hover: #373737;
+  --color-light-gray: rgba(107, 103, 103, 0.77);
+  --color-gray: #6b6767;
+}
+
+/*------------  Fuentes  ------------------*/
+/*Roboto*/
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap");
+
+/*--------------- General -----------------------*/
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  background-color: var(--color-background);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  width: 95%;
+  margin: auto;
 }
