REFACTOR: Cambio en el diseño de Boton More
- Quitando el border-botton por box-shadow
- Quitando Fragment de MediaPlayer (no se estaba usando)

--- a/src/Components/css/BtnVideo.css
+++ b/src/Components/css/BtnVideo.css
@@ -20,10 +20,10 @@
 
 .more-info {
   grid-area: more;
-  border-bottom: 3px solid var(--color-black-hover);
   background: var(--color-black);
 }
 
 .more-info:hover {
   background-color: var(--color-black-hover);
+  box-shadow: 0 2px 5px var(--color-black-hover);
 }
