--- a/src/Components/css/NavbarTable.css
+++ b/src/Components/css/NavbarTable.css
@@ -1,20 +1,20 @@
 .navbar-sort {
-  display: flex;
+  flex-direction: row;
+  background: none;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  width: 100%;
+  width: 95%;
 }
 
 .navbar-sort .navbar-text {
   color: var(--color-white);
-  margin-right: 7vw;
+  margin: 0 7vw 0 0;
   font-size: 0.9em;
 }
 
 .navbar-sort .btn {
   padding: 10px 15px;
-  margin-right: 7vw;
+  margin: 0 7vw 0 0;
   font-size: 0.75em;
 }
 
