--- a/src/Components/css/MediaPlayer.css
+++ b/src/Components/css/MediaPlayer.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 720px;
-  margin: auto;
+  margin: 3vh auto 5vh auto;
+  border-radius: 0 0 35px 35px;
+  box-shadow: 0 2px 5px black;
 }
