--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 /*--------------- Variables ------------------*/
 :root {
   /*Colors*/
-  --color-background: #1b2a49;
+  --color-background: hsl(220deg, 46%, 20%);
+  --color-background-hover: hsl(220deg, 46%, 20%, 0.88);
   --color-primary: #00909e;
   --color-secundary: hsl(222deg, 30%, 39%);
   --color-secundary-hover: hsl(222deg, 30%, 39%, 0.88);
@@ -43,9 +44,11 @@ code {
 }
 
 .btn:not(.btn-reaction) {
+  font-size: 0.8em;
   color: var(--color-font);
   padding: 10px 5px;
   border-radius: 20px;
+  transition: 0.25s;
 }
 
 .btn:hover:not(.btn-option) {
@@ -79,11 +82,6 @@ code {
 .btn-option:hover {
   background-color: var(--color-secundary-hover);
   box-shadow: 0 2px 5px var(--color-secundary-hover);
-}
-
-.btn-option:hover a,
-.btn-option:hover .options-symb {
-  cursor: pointer;
 }
 
 .options {
