REFACTOR: Cambio en los estilos
- El navbar se amplia cuando pasas el mouse encima de el
- El background de los controles pasa a color secundario

--- a/src/Components/css/BtnVideo.css
+++ b/src/Components/css/BtnVideo.css
@@ -4,7 +4,7 @@
   grid-template-areas: "like . dislike . more";
   align-items: center;
   text-align: center;
-  background: var(--color-primary);
+  background: var(--color-secundary);
   padding: 10px 15px;
   border-radius: inherit;
 }
