REFACTOR: Cambios en el codigo
- Nombre adaptados a su uso. Como BtnVideo -> ControlsVideo
- Eliminacion de Navbar y plasmarlo directo al componente App.
Sus estilos se movieron a index.css (Son estilos generales, al final del dia)
- Cambiando la etiqueta a por button. (es lo mas adecuado, desde hace rato)
- Acomodando los estilos de los button

--- a/src/Components/css/NavbarTable.css
+++ b/src/Components/css/NavbarTable.css
@@ -22,8 +22,8 @@
   margin-right: 0;
 }
 
-.Stadistic .btn-option ~ a,
-.Stadistic .btn-option:hover a,
+.Stadistic .btn-option ~ button,
+.Stadistic .btn-option:hover button,
 .Stadistic .btn-option:hover .options-symb {
   cursor: pointer;
 }
