--- a/src/Components/css/NavbarTable.css
+++ b/src/Components/css/NavbarTable.css
@@ -12,14 +12,16 @@
   font-size: 0.9em;
 }
 
-.navbar-sort .btn {
-  padding: 10px 15px;
+.navbar-sort .btn.btn-option {
+  padding: 5px 7px;
   margin: 0 7vw 0 0;
   font-size: 0.75em;
+  align-items: center;
 }
 
-.navbar-sort .btn:last-child {
+.navbar-sort .btn.btn-option:last-child {
   margin-right: 0;
+  padding: 10px 15px;
 }
 
 .Stadistic .btn-option ~ button,
