--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,7 @@ body {
 button {
   background: none;
   border: none;
+  padding: 0;
 }
 
 button:not(.btn-reaction) {
@@ -76,7 +77,7 @@ button:not(.btn-reaction) {
   transition: 0.25s;
 }
 
-.btn:hover:not(.btn-option) {
+.btn:hover {
   cursor: pointer;
 }
 
@@ -116,6 +117,7 @@ button:not(.btn-reaction) {
 }
 
 .options-symb {
+  color: var(--color-font);
   padding: 5px;
 }
 
