REFACTOR: Cambio en el SVG y Botones
- Plasmando los componentes SVG en el documento y no como imagen
- Solucionando problemas con el diseño de los botones y estructura
- Colocando ID a cada elemento de cada fila
- ID de los datos de ejemplo pasan a ser diferentes
- Quitando los ID de la parte visual de la tabla
- Cambio de simbolo en el btn de mas opciones de NavbarTable

--- a/src/Components/css/StadisticTable.css
+++ b/src/Components/css/StadisticTable.css
@@ -10,7 +10,7 @@
 
 .grid-header,
 .grid-row {
-  grid-template-columns: repeat(5, 20%);
+  grid-template-columns: repeat(4, 25%);
   align-items: center;
   text-align: center;
 }
@@ -27,6 +27,7 @@
 .header-table-name {
   margin: 0 10px;
   text-align: center;
+  font-size: 0.85em;
 }
 
 .body-table {
@@ -43,4 +44,10 @@
 .col {
   margin: 10px 0;
   font-size: 0.85em;
+}
+
+@media screen and (min-width: 1024px) {
+  .StadisticTable {
+    font-size: 1.4em;
+  }
 }
