REFACTOR: Cambio en los estilos - De 35px a 20px a los bordes inferiores del video - El ancho y espaciado de los botones del video - Object-fit contain a fill - Añadiendo Class a Video para dedicarles los  estilos a Class y no al ID

--- a/src/Components/css/ControlsVideo.css
+++ b/src/Components/css/ControlsVideo.css
@@ -68,7 +68,8 @@
 
 @media screen and (min-width: 1024px) {
   .controls {
-    grid-template-columns: 50px 10px 50px 1fr 15% 15% 1fr 100px;
+    grid-template-columns: 0.2fr 2% 0.2fr 1fr 15% 15% 1fr 100px;
+    width: calc(100% - 30px);
   }
 
   .more-info p {
