--- a/src/Components/css/MediaPlayer.css
+++ b/src/Components/css/MediaPlayer.css
@@ -3,6 +3,12 @@
   flex-direction: column;
   width: 100%;
   margin: 3vh auto 5vh auto;
-  border-radius: 0 0 35px 35px;
-  box-shadow: 0 2px 5px black;
+  border-radius: 0 0 20px 20px;
+}
+
+@media screen and (min-width: 1024px) {
+  .MediaPlayer {
+    width: 75%;
+    max-width: 100%;
+  }
 }
