--- a/src/Components/css/Video.css
+++ b/src/Components/css/Video.css
@@ -1,3 +1,10 @@
-#video {
+.mediaPlayer-video {
   width: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+  .mediaPlayer-video {
+    max-height: 500px;
+    object-fit: fill;
+  }
 }
